objects/SpringCMEos__SpringCM_Testing__c.object
<CustomObject>
    <fields>
        <fullName>SpringCMEos__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SpringCM Testing</label>
    <nameField>
        <label>SpringCM Testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SpringCM Testing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>